21 December 2009: Matthijs
	- New option 'tcp-query-count:'.
	- New option 'tcp-timeout:' and configure option '--with-tcp-timeout'.
	- New zone option 'notify-retry:'.

11 December 2009: Wouter
	- Disable UDP IPv4 DF flag on Linux/FreeBSD/AIX with socket option.

20 November 2009: Matthijs
	- NSID bugfix: NSD did not recognize NSID in the query.

9 September 2009: Matthijs
	- DLV support

18 August 2009: Matthijs
	- Bug 269.
	- Typo: logincap.h -> login_cap.h

12 August 2009: Matthijs
	- Maintainers feedback

10 August 2009: Matthijs
	- Code review.
	- Also send errors to /dev/null in controlled_stop.
	- chown nsd.db

7 August 2009: Matthijs
	- Bug 266: don't have strptime build error

28 July 2009: Matthijs
	- Bug 263: make TSIG algorithms comparison case insensitive.

23 July 2009: Matthijs
	- Patch Paul Wouters for NSD using hardcoded name.

13 July 2009: Matthijs
	- Bug 236: allow RRs before the SOA RR.
	- Bug 253: No need for NS RRset in authority section, when returning final answer for QTYPE=DNSKEY.

29 June 2009: Wouter
	- patch for use of Linux IPV6_MTU option, so that on linux the default
	  EDNS UDP size advertised becomes 4096 over IPv6.  It fragments the
	  packets using the IPv6 minimum MTU.

19 May 2009: Matthijs
	- Clean up configure script (install hickup)
	- Bug 249: Remove unnecessary LLONG_MIN and LLONG_MAX code.
	- Replace strtoll code with own strtoserial function.
	- Move up to 3.2.3.

11 May 2009: Matthijs
	- Add Off-by-one test

6 May 2009: Matthijs
	- Small fix in SO_REUSEADDR warning log message.
	- Off-by-one bugfix (thanks Ilja van Sprundel, IOActive)

29 April 2009: Matthijs
	- A more ensured do_stop (useful fo nsdc restart).

2 February 2009: Matthijs
	- Bugfix #234.
	- Bugfix #235.
	- Reset 'error occurred' after notifying an error occurred at the $TTL or   
		$ORIGIN directive (Otherwise, the whole zone is skipped because the
		error is reset after reading the SOA).

2 February 2009: Matthijs