@@ -1,3 +1,6 @@
+22 December 2009: Matthijs
+	- New options 'ipv4-edns-size:' and 'ipv6-edns-size'.
+
 21 December 2009: Matthijs
 	- New option 'tcp-query-count:'.
 	- New option 'tcp-timeout:' and configure option '--with-tcp-timeout'.
